fix(file-uploader): fix icon and text alignment

--- a/projects/element-ng/file-uploader/si-file-uploader.component.scss
+++ b/projects/element-ng/file-uploader/si-file-uploader.component.scss
@@ -28,6 +28,9 @@
 }
 
 .file {
+  display: flex;
+  position: relative;
+  margin-block-end: map.get(variables.$spacers, 4);
   min-block-size: map.get(variables.$spacers, 4) + map.get(variables.$spacers, 10);
   transition: opacity variables.$element-default-transition-duration;
 }
